--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     </title>
     <link rel="stylesheet" href="styles.css" />
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
         font-size: 11px;
@@ -33,29 +32,44 @@
     <div class="main" id="main">
       <div class="content">
         <div class="left-side">
-          <h1>Stay updated!</h1>
-          <p>Join 60,000+ product managers receiving monthly updates on:</p>
+          <div class="mobile-img">
+            <img src="./assets/images/illustration-sign-up-mobile.svg" alt="" />
+          </div>
+          <div class="form">
+            <h1>Stay updated!</h1>
+            <p>Join 60,000+ product managers receiving monthly updates on:</p>
 
-          <ul class="bullet">
-            <li>
-              <img src="./assets/images/icon-list.svg" alt="" />
-              <span>Product discovery and building what matters</span>
-            </li>
-            <li>
-              <img src="./assets/images/icon-list.svg" alt="" />
-              <span> Measuring to ensure updates are a success</span>
-            </li>
-            <li>
-              <img src="./assets/images/icon-list.svg" alt="" />
-              <span> And much more! Email address</span>
-            </li>
-          </ul>
+            <ul class="bullet">
+              <li>
+                <img src="./assets/images/icon-list.svg" alt="" />
+                <span>Product discovery and building what matters</span>
+              </li>
+              <li>
+                <img src="./assets/images/icon-list.svg" alt="" />
+                <span> Measuring to ensure updates are a success</span>
+              </li>
+              <li>
+                <img src="./assets/images/icon-list.svg" alt="" />
+                <span> And much more! Email address</span>
+              </li>
+            </ul>
+          </div>
 
           <div class="form">
             <label for="email">
-             <div class="error-message"> <h3>Email address</h3> <span id="error">Valid email required</span></div>
-              <input id="email" type="email" placeholder=" email@company.com" required />
-              <button id="subscribe-btn">Subscribe to monthly newsletter</button>
+              <div class="error-message">
+                <h3>Email address</h3>
+                <span id="error">Valid email required</span>
+              </div>
+              <input
+                id="email"
+                type="email"
+                placeholder=" email@company.com"
+                required
+              />
+              <button id="subscribe-btn">
+                Subscribe to monthly newsletter
+              </button>
             </label>
           </div>
         </div>
@@ -74,14 +88,14 @@
       <div class="success">
         <section>
           <img src="./assets/images/icon-success.svg" alt="" />
-        <h2>Thanks for subscribing!</h2>
-        <p class="success-message">
-          A confirmation email has been sent to
-          <span id="success-email"></span>. Please open it and click the button inside to
-          confirm your subscription. Dismiss message
-        </p>
-  
-        <button id="dismiss-btn"> Dismiss message</button>
+          <h2>Thanks for subscribing!</h2>
+          <p class="success-message">
+            A confirmation email has been sent to
+            <span id="success-email"></span>. Please open it and click the
+            button inside to confirm your subscription. Dismiss message
+          </p>
+
+          <button id="dismiss-btn">Dismiss message</button>
         </section>
       </div>
     </div>
