feat: deleted an unused element

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
+    <!-- Favicon -->
     <link
       rel="icon"
       type="image/png"
@@ -17,46 +18,46 @@
       Frontend Mentor | Newsletter sign-up form with success message
     </title>
     <link rel="stylesheet" href="styles.css" />
-
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
+    <!-- Main section containing the sign-up form -->
     <div class="main" id="main">
       <div class="content">
+        <!-- Left-side content -->
         <div class="left-side">
+          <!-- Mobile illustration -->
           <div class="mobile-img">
-            <img src="./assets/images/illustration-sign-up-mobile.svg" alt="" />
+            <img
+              src="./assets/images/illustration-sign-up-mobile.svg"
+              alt="Mobile view for newsletter letter sign-up"
+            />
           </div>
+          <!-- Form heading and description -->
           <div class="form">
             <h1>Stay updated!</h1>
             <p>Join 60,000+ product managers receiving monthly updates on:</p>
 
+            <!-- Benefits list -->
             <ul class="bullet">
               <li>
-                <img src="./assets/images/icon-list.svg" alt="" />
+                <img src="./assets/images/icon-list.svg" alt="List icon" />
                 <span>Product discovery and building what matters</span>
               </li>
               <li>
-                <img src="./assets/images/icon-list.svg" alt="" />
+                <img src="./assets/images/icon-list.svg" alt="List icon" />
                 <span> Measuring to ensure updates are a success</span>
               </li>
               <li>
-                <img src="./assets/images/icon-list.svg" alt="" />
+                <img src="./assets/images/icon-list.svg" alt="List icon" />
                 <span> And much more! Email address</span>
               </li>
             </ul>
           </div>
 
+          <!-- Email input form -->
           <div class="form">
             <label for="email">
+              <!-- Email input label -->
               <div class="error-message">
                 <h3>Email address</h3>
                 <span id="error">Valid email required</span>
@@ -73,35 +74,33 @@
             </label>
           </div>
         </div>
+        <!-- Right-side illustration -->
         <div class="right-side">
           <img src="./assets/images/illustration-sign-up-desktop.svg" alt="" />
         </div>
       </div>
     </div>
-    <!-- Sign-up form start -->
 
-    <!-- Sign-up form end -->
-
-    <!-- Success message start -->
-
+    <!-- Success message container -->
     <div class="success-main" id="success-main">
       <div class="success">
         <section>
-          <img src="./assets/images/icon-success.svg" alt="" />
+          <!-- Success icon -->
+          <img src="./assets/images/icon-success.svg" alt="Success icon" />
           <h2>Thanks for subscribing!</h2>
           <p class="success-message">
             A confirmation email has been sent to
             <span id="success-email"></span>. Please open it and click the
-            button inside to confirm your subscription. Dismiss message
+            button inside to confirm your subscription.
           </p>
 
+          <!-- Dismiss button -->
           <button id="dismiss-btn">Dismiss message</button>
         </section>
       </div>
     </div>
 
+    <!-- Link to external JavaScript file -->
     <script src="./script.js"></script>
-
-    <!-- Success message end -->
   </body>
 </html>
